@@ -57,10 +57,11 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>15</source>
-					<target>15</target>
+					<source>${maven.compiler.source}</source>
+					<target>${maven.compiler.target}</target>
 					<skip>true</skip>
-<!--					<compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
+                    <compilerArgs>--enable-preview</compilerArgs>
+                    <!--					<compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
 				</configuration>
 			</plugin>
 
@@ -231,6 +232,24 @@
 			<groupId>com.madgag.spongycastle</groupId>
 			<artifactId>prov</artifactId>
 			<version>1.58.0.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.github.novacrypto</groupId>
+			<artifactId>BIP32</artifactId>
+			<version>2019.01.27</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.github.novacrypto</groupId>
+			<artifactId>BIP39</artifactId>
+			<version>2019.01.27</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.github.novacrypto</groupId>
+			<artifactId>BIP44</artifactId>
+			<version>2019.01.27</version>
 		</dependency>
 
 		<dependency>
